update-manager (1:0.150.2) UNRELEASEDnatty-proposed; urgency=low

  * debian/control:
    - point to "natty" branch
  * remove "kde-plasmoid-cwp" early as it will break upgrades
    later (LP: #773022)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 02 May 2011 09:52:35 +0200

update-manager (1:0.150.1) natty-proposed; urgency=low

  [ Brian Murray ]
  * DistUpgrade/DistUpgradeApport.py: 
    - do not report zero size attachments (LP: #772052)
  * DistUpgrade/DistUpgrade.cfg:
    - enable apport for distribution upgrades (LP: #772913)
  * DistUpgrade/DistUpgradeController.py:
    - use service to start apport

  [ Michael Vogt ]
  * DistUpgrade/DistUpgrade.cfg:
    - Remove 'dontzap' from kubuntu-desktops rules (LP: #769680).
      This fixes a upgrade issue when a old package is leftover

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 29 Apr 2011 15:55:38 +0200

update-manager (1:0.150) natty; urgency=low

  * DistUpgrade/DistUpgradeQuirks.py, tests/test_quirks.py:
    - don't print a error for already patched files, this removes
      a misleading error from the upgrade logs
    - update tests
  
 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 20 Apr 2011 14:25:15 +0200

update-manager (1:0.147.6) natty; urgency=low

  * AutoUpgradeTester/profile/{euca-cloud,euca-nc,xubuntu}/DistUpgrade.cfg:
    - updated for maverick->natty now that the auto-upgrade-test server
      has more diskspace
  * DistUpgrade/DistUpgradeController.py, DistUpgrade/DistUpgradeMain.py:
    - make running-under-ssh check more robust by looking for sshd parent
  * DistUpgrade/DistUpgradeViewText.py:
    - make user confirm information() messages before continuing
      (important for e.g. the "sshd has started" message)
  * DistUpgrade/DistUpgradeQuirks.py, DistUpgrade/DistUpgradeController.py:
    - ensure that new recommends are installed on a desktop mode upgrade 
      even if that got disabled e.g. via synaptic (LP: #759262)
    - add test for this feature
