@@ -2,8 +2,13 @@ update-manager (1:0.150.2) UNRELEASEDnatty-proposed; urgency=low
 
   * debian/control:
     - point to "natty" branch
-  * remove "kde-plasmoid-cwp" early as it will break upgrades
-    later (LP: #773022)
+  * DistUpgrade/DistUpgrade.cfg:
+    - remove "kde-plasmoid-cwp" early as it will break upgrades
+      later (LP: #773022)
+  * DistUpgrade/DistUpgradeCache.py:
+    - do not fail if not all meta-package can not be upgraded, packages
+      like ubuntu-desktop and xubuntu-desktop have implicit conflicts
+      LP: #775411
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 02 May 2011 09:52:35 +0200
 
